# gino-starlette

./: LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
example/: app.py
examples/prod_fastapi_demo/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  run.py
examples/prod_fastapi_demo/app/: config.py  main.py
examples/prod_fastapi_demo/app/migrations/: env.py
examples/prod_fastapi_demo/app/migrations/versions/: 366bcf1b771e_initial.py  9c28fa5b044e_initial.py
examples/prod_fastapi_demo/app/models/: __init__.py  users.py
examples/prod_fastapi_demo/app/views/: __init__.py  index.py  users.py
examples/prod_fastapi_demo/migrations/: env.py
examples/prod_fastapi_demo/migrations/versions/: 9c28fa5b044e_initial.py
examples/prod_fastapi_demo/src/gino_fastapi_demo/: asgi.py  config.py  main.py
examples/prod_fastapi_demo/src/gino_fastapi_demo/models/: __init__.py  users.py
examples/prod_fastapi_demo/src/gino_fastapi_demo/views/: index.py  users.py
examples/prod_fastapi_demo/tests/: conftest.py  test_users.py
examples/simple-fastapi-demo/: app.py  requirements.txt
examples/simple_fastapi_demo/: app.py  requirements.txt
examples/simple_starlette_demo/: app.py  requirements.txt
src/: gino_starlette.py
tests/: conftest.py  test_demo.py  test_gino_starlette.py
