[tool.poetry]
name = "gino-starlette"
version = "0.1.6"
description = "An extension for GINO to integrate with Starlette"
license = "BSD-3-Clause"
authors = ["Tony Wang <wwwjfy@gmail.com>"]
maintainers = ["Aobo Shi <shiaobo8@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/python-gino/gino-starlette"
repository = "https://github.com/python-gino/gino-starlette"
documentation = "https://python-gino.org/docs/"
keywords = ["sqlalchemy", "python3", "starlette", "gino"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"  # fresh black requires at least 3.6.2 so we can't use ^3.6
starlette = ">=0.19,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
gino = "^1.0"

[tool.poetry.dev-dependencies]
black = "^22.3"

# tests
pytest = [
    { version = "^7.1", python="^3.7" },
    { version = "^6.2", python="~3.6" }
]
pytest-asyncio = "^0.15"
pytest-cov = "^3.0"
pytest-mock = "^3.6"
pytest-virtualenv = "^1.7"
requests = "^2.26"

[tool.poetry.plugins."gino.extensions"]
"starlette" = "gino_starlette"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
