[tool.poetry]
name = "prod_fastapi_demo"
version = "0.1.0"
description = "A demo of a production-ready project based on GINO and FastAPI."
authors = ["Aobo Shi <aobo.shi@decentfox.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.48.0"
gino = { git = "https://github.com/python-gino/gino.git" }
gino-starlette = { git = "https://github.com/python-gino/gino-starlette.git"}
uvicorn = "^0.11.2"
gunicorn = "^20.0.4"
alembic = "^1.4.0"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

