[tool.poetry]
name = "gino-fastapi-demo"
version = "0.1.0"
description = "A demo of a production-ready project based on GINO and FastAPI."
authors = ["Aobo Shi <aobo.shi@decentfox.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
gino = {extras = ["starlette"], version = "^1.0.0"}
importlib_metadata = { version = "^1.3.0", python = "<3.11" }
uvicorn = "^0.17.0"
gunicorn = "^20.1.0"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.plugins."gino_fastapi_demo.modules"]
"index" = "gino_fastapi_demo.views.index"
"users" = "gino_fastapi_demo.views.users"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
